<resources>
    <string name="app_name">Hoteles La Paz</string>
    <string name="nombre_del_hotel">Nombre del Hotel</string>
    <string name="detalleHotelPresidente">Este hotel moderno se encuentra a 4 minutos a pie de la basílica de San Francisco y a 8 minutos a pie del popular Mercado de las Brujas. Las habitaciones son tranquilas, tienen una decoración acogedora y muebles tradicionales y están equipadas con Wi-Fi gratis, televisión de pantalla plana y minibar. Las suites cuentan con zona de descanso, bañera de hidromasaje y vistas a la basílica, o sala de reuniones privada con baño adicional. Servicio de habitaciones disponible las 24 horas. El desayuno y el aparcamiento están incluidos. Cuenta con 2 restaurantes informales, una piscina cubierta, una bañera de hidromasaje, saunas y servicio de masajes. Dispone de un centro de negocios abierto las 24 horas, 4 salas de reuniones y servicio de secretaría.</string>
    <string name="num_presidente">22408355</string>
    <string name="direc_presidente">Potosi, La Paz Zona 10</string>
    <string name="hotel_presidente">Hotel Presidente</string>
    <string name="geoLoc_presidente">-16.495599,-68.135907</string>
    <string name="hotel_casa_grande_suites">Casa Grande Suites</string>
    <string name="direc_casa_grande_suites">Av. Ballivián, esq. Calle 17 Nº 1000, La Paz</string>
    <string name="geoLoc_casa_grande_suites">-16.538758,-68.082596</string>
    <string name="num_casa_grande_suites">22795511</string>
    <string name="detalleCasaGrandeSuites">Los viajeros frecuentes dan muy buena puntuación a este alojamiento. La Casa Grande Suites es un edificio moderno con interiores de lujo, sauna e instalaciones de fitness situado en la zona residencial de Calacoto, a 10 km del centro de La Paz.</string>
    <string name="hotel_caminoCasaReal"><![CDATA[Camino Real Aparthotel & Spa]]></string>
    <string name="direc_caminoCasaReal">Capitán Ravelo 2123, La Paz</string>
    <string name="geoLoc_caminoCasaReal">-16.505721,-68.126888</string>
    <string name="num_caminoCasaReal">22441515</string>
    <string name="detalle_caminoCasaReal">Este hotel moderno, situado a 2 km del recinto deportivo del Estadio Hernando Siles, se encuentra a 3 km de la Plaza Murillo del casco antiguo y de la atracción turística del Mercado de las Brujas. Las habitaciones discretas tienen una decoración tradicional y cuentan con Wi-Fi gratis, televisión de pantalla plana y minibar. Todas disponen de vistas panorámicas y servicio de habitaciones. Las habitaciones familiares tienen además cocina básica y sala de estar. El desayuno buffet, el acceso a un gimnasio y el aparcamiento son gratuitos. Cuenta con una cafetería y un restaurante especializado en carnes a la brasa. Un spa ofrece tratamientos de salud y belleza, saunas y una piscina cubierta.</string>
    <string name="hotel_pirwaHostel">Pirwa Hostel La Paz</string>
    <string name="direc_pirwHostel">Calle Ricardo Mujía 766, Sopocachi, La Paz</string>
    <string name="hotel">hotel</string>
    <string name="direccion">Dirección:</string>
    <string name="telefono">Teléfono:</string>
    <string name="detalle_del_hotel">Detalle del Hotel</string>
    <string name="vaya_a_configuraciones">Vaya a confirguraciones para autorizar llamada</string>
    <string name="mi">MIAPP</string>
    <string name="hotel_calacoto">Hotel Calacoto</string>
    <string name="direc_hotel_Calacoto">Calle 13 (esquina calle Bustamente), La Paz, Calle 13, La Paz</string>
    <string name="num_hotelCalacoto">22792463</string>
    <string name="detalle_hotelCalacoto">Este tranquilo hotel cuenta con un patio interior con techo de cristal y se encuentra en la esquina de una calle arbolada. Está situado a 5 km de las agujas de roca del Valle de la Luna y a 10 km de la emblemática Plaza Murillo, en el casco antiguo de La Paz. Las habitaciones son sencillas y cuentan con Wi-Fi gratis, televisión por cable y cajas fuertes. Las suites y los apartamentos de 2 dormitorios son discretos, tienen capacidad para 4 personas e incluyen, además, cocinas y salas de estar o comedores. El aparcamiento es gratuito, al igual que el desayuno buffet que se sirve en un restaurante informal con techo de vigas. El hotel también cuenta con ordenadores para huéspedes y un jardín.</string>
    <string name="detalle_hotelPirwa">Quédate en Pirwa La Paz que se sitúa a pocos minutos a pie de la estación teleférica de Sopocachi, el parque Montículo y restaurantes de calidad. Para una cómoda noche de descanso, elige entre habitaciones privadas o dormitorios compartidos, con baño privado o compartido. Luego, empezar el día con un desayuno bufé de estilo americano. Mientras está en el hostel, puedes relajarte en nuestro salón de juegos y televisión o actualizar su blog de viajes usando nuestra conexión gratuita a internet y Wi-Fi. Cuando esté listo para aventurarse más lejos, nuestra agencia de viajes te ayudará respondiendo a tus preguntas y organizar cualquier tipo de transporte o excursiones que desees, desde los picos glaciares Huayna Potosí a las formaciones erosionadas del Valle de la Luna, la estimulante Carretera de la muerte, y los paisajes surrealistas y variadas en el Salar de Uyuni y el desierto de Siloli.</string>
    <string name="hotel_gloria">Hotel Gloria La Paz</string>
    <string name="direc_hotelGloria"><![CDATA[Potosi & Genaro Sanjines, La Paz Zona 10]]></string>
    <string name="num_hotelGloria">22407070</string>
    <string name="detalle_hotelGloria">Hotel Gloria La Paz se encuentra en un edificio impresionante situado a 200 metros del parque Murillo y ofrece habitaciones con TV por cable y conexión Wi-Fi gratuita. Este establecimiento sirve desayunos y cuenta con 2 restaurantes. La zona de museos está a 300 metros. Las habitaciones del Gloria La Paz presentan suelos de moqueta, muebles de madera y cortinas largas. Incluyen calefacción y baño privado. Todos los días se sirve un desayuno bufé. El restaurante Manantial ofrece especialidades vegetarianas, mientras que el Vicuñita de Plata prepara platos locales e internacionales. En el bar podrá disfrutar de bebidas y aperitivos.</string>
    <string name="hotel_europa">Hotel Europa</string>
    <string name="direc_hotelEuropa">Tiahuanaco 64, La Paz</string>
    <string name="num_hotelEuropa">22315656</string>
    <string name="detalle_hotelEuropa">Este hotel informal se encuentra a 1 km de la Plaza Murillo y del Museo de la Coca, y a 8 km del Aeropuerto Internacional El Alto.Las tranquilas habitaciones cuentan con Wi-Fi gratis, televisor de pantalla plana, zona de descanso y minibar. Las suites tienen una sala de estar independiente con una pequeña cocina. La suite superior dispone de un balcón y bañera de hidromasaje. El aparcamiento es gratuito. El hotel cuenta con un restaurante acogedor, un restaurante sofisticado y un bar elegante. Además, incluye un gimnasio, un spa con piscina cubierta, saunas y jacuzzi. También dispone de un salón en el vestíbulo con una fuente.</string>
    <string name="hotel_rey">Hotel Rey Palace</string>
    <string name="dire_rey">Av.20 de Octubre 1947, La Paz</string>
    <string name="num_rey">22418541</string>
    <string name="detalle_rey">El prestigio de El Rey Palace Hotel se debe a un servicio de excelente calidad que satisface las necesidades de los clientes de todo el mundo. Nuestros 24 años de experiencia nos ha dado el liderazgo dentro del mercado hotelero en Bolivia. En 2010, gracias a nuestro excelente servicio nos convertimos en un distinguido 5-Star Apart Hotel en La Paz. Te invitamos a disfrutar de una nueva experiencia en un lugar mágico donde la tradición y la modernidad se unen.</string>
    <string name="num_pirwa">22410044</string>
    <string name="hotel_panamerican">Hotel Panamerican</string>
    <string name="direc_panamerican">Calle Mexico 1555 Entre Nicolas Acosta, Mexico, La Paz</string>
    <string name="num_panamerican">22317829</string>
    <string name="detalle_panamerican">Este hotel informal, en un edificio moderno con fachada de cristal y de estilo art déco, se encuentra a 7 minutos a pie de la estación de autobuses PumaKatari (Chasquipampa)-Plaza Camacho y a 2 km del Museo Nacional de Arqueología. Las habitaciones y suites son elegantes y cuentan con vistas a la ciudad, televisión por cable, Wi-Fi gratis y mininevera. Servicio de habitaciones disponible. El hotel ofrece un desayuno buffet gratuito y cuenta con restaurante y aparcamiento limitado en la calle.</string>
</resources>
